# cbat_tools

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.min  LICENSE  README.md  build_both.sh
bap-angr/: Readme.md  cg_similarity_score_data.md  static_vsa_data.md
bap-notes/: README.md
bap-notes/01-preliminaries/: 01-Documentation-and-help.md  02-Running-with-docker.md  03-Using-the-CLI.md  04-Using-BAP-in-utop.md  05-Plugins.md  06-Organizing-files.md  07-Extensions.md  08-Extension-errors.md  09-Passes.md  10-Multiple-passes.md  11-Parameters.md  12-Logging.md  13-Custom-commands.md  14-Custom-command-errors.md  15-Using-BAP-as-a-library.md
bap-notes/02-knowledge-base/: 01-About-the-KB.md  02-KB-classes.md  03-Multisorted-KB-classes.md  04-KB-domains.md  05-KB-slots.md  06-KB-objects.md  07-KB-promises.md  08-KB-snapshots.md  09-Toplevel-eval.md
bap-notes/03-compilation-units/: 01-About-compilation-units.md  02-KB-labels.md  03-More-about-KB-labels.md  04-Compilation-units.md  05-Objects-inside-objects.md  06-KB-targets.md  07-Memory.md  08-Looking-up-labels.md
bap-notes/04-semantics/: 01-About-BAP-semantics.md  02-Providing-semantics.md  03-Promising-semantics.md  04-Variable-assignments.md  05-Multiple-variable-assignments.md  06-Compiling-to-core-theory-programs.md  07-Custom-theories.md
bap-notes/05-KB-analyses/: 01-About-KB-analyses.md  02-A-hello-world-analysis.md  03-A-more-complex-analysis.md
bildb/: .gitignore  Makefile  README.md  bildb.ml  example.yml  init.yml
bildb/lib/: bildb_cursor.ml  bildb_cursor.mli  bildb_init.ml  bildb_init.mli  bildb_position.ml  bildb_position.mli  bildb_startup.ml  bildb_startup.mli  bildb_state.ml  bildb_state.mli  bildb_tty.ml  bildb_tty.mli  bildb_ui.ml  bildb_ui.mli  bildb_utils.ml  bildb_utils.mli  cursor.ml  cursor.mli  init.ml  init.mli  (+8 more)
docs/: .gitignore  cbat.css  exercises.html  index.html  installation.html  reference.html  tutorial.html
explicit_edge/: .merlin  Makefile  README.md  _oasis  explicit_edge.ml
value_set/: .merlin  Makefile  README.md  _oasis
vsa/: README.md
vsa/value_set/lib/: cbat_value_set.opam
vsa/value_set/lib/src/: cbat_ai_memmap.ml  cbat_ai_memmap.mli  cbat_ai_representation.ml  cbat_back_edges.mli  cbat_clp.ml  cbat_clp_set_composite.mli  cbat_contextual_fixpoint.ml  cbat_contextual_fixpoint.mli  cbat_fin_set.mli  cbat_lattice_intf.ml  cbat_vsa.ml  cbat_vsa_utils.ml  cbat_word_ops.ml  cbat_wordset_intf.ml  dune
wp/: Makefile  README.md  wp.ml
wp/lib/bap_wp/: .ocamlformat  Makefile  README.md  bap_wp.opam  dune-project  out
wp/lib/bap_wp/src/: bil_to_bir.ml  bil_to_bir.mli  cfg_path.ml  cfg_path.mli  compare.ml  compare.mli  constraint.ml  constraint.mli  dune  environment.ml  environment.mli  equality.ml  equality.mli  loader.ml  loader.mli  output.ml  output.mli  postprocess.ml  postprocess.mli  precondition.ml  precondition.mli  ps.ml  ps.mli  run_parameters.ml  run_parameters.mli  runner.ml  runner.mli  symbol.ml  symbol.mli  symbols.ml  symbols.mli  utils.ml  utils.mli  z3_utils.ml  z3_utils.mli
wp/lib/bap_wp/tests/performance/: dune  test.ml  test_precondition.ml
wp/lib/bap_wp/tests/unit/: #test_precondition.ml#  dune  test.ml  test_cfg_path.ml  test_compare.ml  test_constraint.ml  test_output.ml  test_precondition.ml  test_utils.ml  test_z3_utils.ml  testing_utilities.ml
wp/plugin/: .gitignore  .merlin  Makefile  README.md  design_decisions.md  dune-project  wp.ml  wp.opam
wp/plugin/api/c/: cbat.h  cbat_libc.h
wp/plugin/lib/: analysis.ml  analysis.mli  cache.ml  cache.mli  equality.ml  equality.mli  parameters.ml  parameters.mli  utils.ml  utils.mli  wp_analysis.ml  wp_analysis.mli  wp_cache.ml  wp_cache.mli  wp_parameters.ml  wp_parameters.mli  wp_utils.ml  wp_utils.mli
wp/plugin/resources/sample_binaries/diff_ret_val/: Makefile
wp/plugin/resources/sample_binaries/dummy/: Makefile
wp/plugin/resources/sample_binaries/equiv_null_check/: main_2.c  main_2_cfg.dot
wp/plugin/resources/sample_binaries/function_call/: run_wp.sh
wp/plugin/resources/sample_binaries/nested_function_calls/: run_wp.sh
wp/plugin/resources/sample_binaries/no_stack_protection/: Makefile  run_wp.sh
wp/plugin/resources/sample_binaries/return_argc/: run_wp.sh
wp/plugin/resources/sample_binaries/simple_wp/: run_wp.sh
wp/plugin/resources/sample_binaries/switch_case_assignments/: Makefile  run_wp.sh
wp/plugin/resources/sample_binaries/switch_cases/: .gitignore  main_1-arm  main_1-arm.bpj  main_2-arm  main_2-arm.bpj  run_wp.sh
wp/plugin/resources/sample_binaries/verifier_calls/: verifier_assume_sat.c  verifier_assume_unsat.c  verifier_nondet.c
wp/plugin/save_project/: Makefile  save_project.ml
wp/plugin/src/: dune  wp_cache.mli  wp_main.ml  wp_utils.mli
wp/plugin/tests/: Makefile  dune-project  test.ml  test_parameters.ml  test_utils.ml  test_wp.ml
wp/plugin/tests/integration/: dune  test.ml  test_wp_integration.ml
wp/plugin/tests/test_libs/: dune  test_wp.ml  test_wp_utils.ml
wp/plugin/tests/unit/: test.ml  test_parameters.ml  test_utils.ml  test_wp_unit.ml
wp/pycbat/: README.md  pyproject.toml  requirements.txt
wp/pycbat/junk/: README.md  angrplay.ipynb  angrtype.py  foo.c  tests.py
wp/pycbat/src/cbat/: __init__.py  helpers.py
wp/pycbat/tests/: test_cbat.py
wp/pycbat/tests/resources/: Makefile  test4.c  test5.c  test6_2.c
(+761 files in other folders)
