opam-version: "2.0"
name: "bap_wp"
version: "0.1"
synopsis: "A weakest-precondition analysis library"
description: """
A weakest-precondition analysis library for use with BAP.
"""
maintainer: "Draper Laboratory"
authors: [
  "Cody Roux <croux@draper.com>"
  "Chloe Fortuna <cfortuna@draper.com>"
  "Chris Casinghino <ccasinghino@draper.com>"
  "JT Paasch <jpaasch@draper.com>"
  "Philip Zucker <pzucker@draper.com>"
]
license: "MIT"
homepage: "https://github.com/draperlaboratory/cbat_tools"
bug-reports: "https://github.com/draperlaboratory/cbat_tools"
dev-repo: "git+https://github.com/draperlaboratory/cbat_tools"
depends: [
  "bap" {>= "master"}
  "core" {>= "0.12.4"}
  "z3" {>= "4.8.6"}
  "ounit"
]
